# dlnactl

./: .gitignore  README.md  device.py  main.py  pyproject.toml  server.py
dlnactl/: cli.py  device.py  devices.toml  display.py  playlist.py  server.py  transcode.py  workarounds.py
simple_dlna/: cli.py
