[project]
name = "dlnactl"
version = "0.1.0"
description = "A CLI tool for controlling and playing media on DLNA devices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-upnp-client>=0.46.2",
    "prompt-toolkit>=3.0.52",
    "python-ffmpeg>=2.0.12",
    "rich>=14.3.3",
]

[project.scripts]
dlnactl = "dlnactl.cli:main"
